rust/crates/spek/src/snapshots/spek__notation__tests__test_note_from_strsharp_flat.snap
---
source: crates/spek/src/notation.rs
expression: "format!(\"input:{input}\\n{result:?}\\ndisplay:{result}\")"
---
input:C#b
Note { pitch: C, accs: [Sharp, Flat], octave: None, cents: None }
display:C♯♭
