rust/crates/spek/src/snapshots/spek__notation__tests__test_to_midiC_sharp_3.snap
---
source: crates/spek/src/notation.rs
expression: "format!(\"{note:?}{result:.0}\")"
---
Note { pitch: C, accs: [Sharp], octave: Some(3), cents: None }49
